--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+	<style>
+		.google-maps {
+		  position: relative;
+		  padding-bottom: 75%; // This is the aspect ratio
+		  height: 0;
+		  overflow: hidden;
+		}
+		.google-maps iframe {
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100% !important;
+		  height: 100% !important;
+		}
+	  </style>
 	</head>
 	<body>
 		
@@ -89,7 +104,8 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Farah &amp; Ghazi</h1>
-							<h2>We Are Getting Married</h2>
+							<!-- <h2>We Are Getting Married</h2> -->
+							
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
 						</div>
@@ -103,6 +119,16 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+					<p><i>
+						Di antara tanda-tanda (kebesaran)-Nya ialah bahwa Dia menciptakan pasangan-pasangan untukmu dari (jenis) 
+						dirimu sendiri agar kamu merasa tenteram kepadanya. Dia menjadikan di antaramu rasa cinta dan kasih sayang. 
+						Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berpikir.
+					</i>
+					</p>
+					<p style="text-align: center;">
+					<i><small>Q.S Ar Rum : 21</small></i>
+					</p>
+					<hr>
 					<h2>InsyaAllah kami akan akan menikahkan anak kami pada</h2>
 					<h3>06 Mei 2022</h3>
 					<p>Maka dengan itu kami mengundang Bapak/Ibu <b>Fulan Dynamic</b> untuk hadir diacara pernikahan anak kami</p>
@@ -115,7 +141,7 @@
 					</div>
 					<div class="desc-groom">
 						<h3>Farah Diba Alba Fitria, S.Psi.</h3>
-						<p>Anak ke-2 dari Bapak Farid Makrup & Ibu Yayah Hilaliah</p>
+						<p>Putri dari Bapak H. Farid Makrup, S.Pd. & Hj. Ibu Yayah Hilaliah, S.Pd.</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -124,8 +150,8 @@
 						<img src="images/bride.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3>Ghazi fulan fulan</h3>
-						<p>Anak ke-2 dari Bapak Waskito & Ibu Titin Suratin (Alm)</p>
+						<h3>Ghazian Hazazi S.T.</h3>
+						<p>Putra dari Bapak Ir. Teko Ponco Waskito & Ibu Sayutiningsi, S.E. (Almh.)</p>
 					</div>
 				</div>
 			</div>
@@ -147,32 +173,32 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Main Ceremony</h3>
+									<h3>Akad</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>08:00</span>
-										<span>10:00</span>
+										<span>08:00 WIB</span>
+										<span>09:00 WIB</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>Sabtu</span>
 										<span>06 Mei 2023</span>
 									</div>
-									<p>Akad nikah yang didampingin oleh penghulu dan saksi dari keluarga mempelai pria <b>Bpk funaln bin fulan</b> dan dari mempelai wanita <b>Bapak Fadihlah pudil</b></p>
+									<p>Akad nikah yang didampingin oleh penghulu dan saksi dari keluarga mempelai pria dan wanita</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Ramah Tamah</h3>
+									<h3>Resepsi</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>7:00 PM</span>
-										<span>12:00 AM</span>
+										<span>11:00 WIB</span>
+										<span>13:00 WIB</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
+										<span>Sabtu</span>
+										<span>06 Mei 2023</span>
 									</div>
 									<p>Jamuan ramah tamah, pemberian selamat kepada pengatin serta foto bersama keluarga dan tamu undangan.</p>
 								</div>
@@ -334,50 +360,23 @@
 		</div>
 	</div> -->
 
-	<!-- <div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
+	<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="display-t">
 					<div class="display-tc">
-						<div class="col-md-3 col-sm-6 animate-box">
+						<div class="col-md-12 col-sm-12 animate-box">
 							<div class="feature-center">
 								<span class="icon">
-									<i class="icon-users"></i>
+									<i class="icon-heart-outlined"></i>
 								</span>
 
-								<span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Estimated Guest</span>
-
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-user"></i>
+								<!-- <span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50">1</span> -->
+								<span class="counter-label">
+									MERUPAKAN SUATU KEHORMATAN BAGI KAMI APA BILA BAPAK/IBU SAUDARA/I BERKENAN HADIR UNTUK
+									MEMBERIKAN DOA RESTU KEPADA KEDUA MEMPELAI
 								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">We Catter</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-calendar"></i>
-								</span>
-								<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Events Done</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-clock"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="2345" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Hours Spent</span>
 
 							</div>
 						</div>
@@ -392,111 +391,36 @@
 			<div class="row">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<span>Best Wishes</span>
-						<h2>Friends Wishes</h2>
+						<span>Location</span>
+						<h2>Balai Komando Cijantung</h2>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-12 animate-box">
-						<div class="wrap-testimony">
-							<div class="owl-carousel-fullwidth">
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-1.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-2.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, at the coast of the Semantics, a large language ocean."</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-3.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean."</p>
-										</blockquote>
-									</div>
-								</div>
+					<div class="col-md-10">
+						<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+							<span class="icon">
+								<i class="icon-calendar"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Alamat</h3>
+								<p>JL. RA. Fadillah No.9, RW.5, Cijantung, Kec. Ps Rebo, Kota Jakarta Timur</p>
 							</div>
 						</div>
+	
+						<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+							<span class="icon">
+								<i class="icon-image"></i>
+							</span>
+							<div class="feature-copy google-maps">
+								<h3>Google Maps</h3>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.592069631531!2d106.85167737419961!3d-6.317193393672187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ed983d9b06b1%3A0x1edeb30c15c1859d!2sJl.%20RA.%20Fadillah%20No.9%2C%20RT.1%2FRW.5%2C%20Cijantung%2C%20Kec.%20Ps.%20Rebo%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013770!5e0!3m2!1sen!2sid!4v1682678378064!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<div id="fh5co-services" class="fh5co-section-gray">
-		<div class="container">
-			
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>We Offer Services</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-calendar"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>We Organized Events</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-image"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Photoshoot</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-video"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Video Editing</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-md-6 animate-box">
-					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
-					</div>
-				</div>
-			</div>
-
-			
-		</div>
-	</div> -->
-
 
 	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
@@ -540,22 +464,8 @@
 			</div>
 		</div>
 	</div>
-<!-- 
-	<footer id="fh5co-footer" role="contentinfo">
-		<div class="container">
 
-			<div class="row copyright">
-				<div class="col-md-12 text-center">
-					<p>
-						<small class="block">&copy; 2023 Muhammad Farras Ma'ruf. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-					</p>
-				</div>
-			</div>
-
-		</div>
-	</footer> -->
-	</div>
+	
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
