--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Undangan Pernikahan Farah Diba Alba Fitria</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Undangan Pernikahan Farah Diba Alba Fitria" />
+	<meta name="keywords" content="Undangan Pernikahan Farah Diba Alba Fitria" />
+	<meta name="author" content="Muhammad Farras Ma'ruf" />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -528,7 +528,7 @@
 
 
 
-	// kirim pesan undangan
+	// kirim pesan undangan 
 	node_name = document.getElementById("name")
 	node_message = document.getElementById("message")
 	node_button_kirim_pesan = document.getElementById("kirim_pesan")
