final touch, 2nd

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					</p>
 					<hr>
 					<h2>InsyaAllah kami akan akan menikahkan anak kami pada</h2>
-					<h3>06 Mei 2022</h3>
+					<h3>06 Mei 2023</h3>
 					<p>Maka dengan itu kami mengundang Bapak/Ibu <b id="tamu_undangan">Fulan Dynamic</b> untuk hadir diacara pernikahan anak kami</p>
 				</div>
 			</div>
@@ -447,7 +447,7 @@
 									<div class="col-md-4 col-sm-4">
 										<div class="form-group">
 											<label for="message" class="sr-only">Pesan</label>
-											<textarea type="message" class="form-control" id="message" placeholder="Email"></textarea>
+											<textarea type="message" class="form-control" id="message" placeholder="Pesan"></textarea>
 										</div>
 									</div>
 								</div>
